flask-be/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-be
spec:
  selector:
    matchLabels:
      app: flask-be
  replicas: 5
  template:
    metadata:
      labels:
        app: flask-be
    spec:
      containers:
        - name: flask-be
          image: ghcr.io/gaston-aqs/flask-be:15
          ports:
            - name: flask-be
              containerPort: 5000
              protocol: TCP
      imagePullSecrets:
        - name: ghcr-login-secret
