flask-be/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-be-service
spec:
  selector:
    app: flask-be
  type: NodePort
  ports:
  - port: 5000
    targetPort: 5000
