flask-be/base/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: flaskapp
  annotations:
    # Disables http redirect to https
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: flask-be
          servicePort: 5000
